--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
 ---
+![This is an image](https://t3.ftcdn.net/jpg/03/76/07/04/360_F_376070489_EzDpO7FxSlzytoetXp7e27fQCMzs6UgB.jpg)
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+Hello, my name is Haeryn and this is my homepage.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+Trimester 2
+<table>
+  <tr>
+   <th>Week</th>
+   <th>Notes</th>
+   <th>Grade</th>
+  </tr>
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+  <tr>
+    <td>13</td>
+    <td><a href="">Binary Hacks</a></td>
+    <td></td>
+  </tr>
 
-You can edit the `index.html` file to change this content.
+  <tr>
+    <td>14</td>
+    <td><a href="">3.1-2 Notes</a></td>
+    <td>1/1 because I completed everything accurately and did extra binary hacks</td>
+  </tr>
 
-# Posts
+  <tr>
+    <td>15</td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
