--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ Trimester 2
 
   <tr>
     <td>14</td>
-    <td><a href="">3.1-2 Notes</a></td>
-    <td>1/1 because I completed everything accurately and did extra binary hacks</td>
+    <td><a href="">3.1-2 Notes</a><a href="">3.3-4 Notes</a></td>
+    <td>1/1 because I completed everything accurately and did extra binary hacks, and our group did the lesson for 3.3-4.</td>
   </tr>
 
   <tr>
