deploy: 15e7921af249300947b7738647ca26d0a5c6d4f2

--- a/vocab/index.html
+++ b/vocab/index.html
@@ -95,6 +95,21 @@ a { color: rgb(255,255, 255) !important; }</p>
   <li>
     <p>boolean- value that is either true or false</p>
   </li>
+  <li>
+    <p>ASCII- is a character encoding standard for electronic communication.</p>
+  </li>
+  <li>
+    <p>Unicode- is an information technology standard for the consistent encoding, representation, and handling of text expressed in most of the world’s writing systems.</p>
+  </li>
+  <li>
+    <p>Data Compression- is the process of encoding, restructuring or otherwise modifying data in order to reduce its size.</p>
+  </li>
+  <li>
+    <p>Lossy- in which unnecessary information is discarded.</p>
+  </li>
+  <li>
+    <p>Lossless- is a class of data compression algorithms that allows the original data to be perfectly reconstructed from the compressed data.</p>
+  </li>
 </ul>
 
 <h1 id="unit-3-algorithmprogramming-terms">Unit 3 Algorithm/Programming Terms</h1>
@@ -190,6 +205,9 @@ a { color: rgb(255,255, 255) !important; }</p>
   </li>
   <li>
     <p>procedural abstraction- One good use of a procedure is to eliminate duplicate code. In addition to improving the readability of the app, the use of a procedure will make it easier to modify that chunk of code because it only occurs once in the program. Use of parameters and complexity.</p>
+  </li>
+  <li>
+    <p>python def procedures- A procedure allows us to group a block of code under a name, known as a procedure name.</p>
   </li>
 </ul>
 
