--- a/vocab/index.html
+++ b/vocab/index.html
@@ -225,7 +225,7 @@ a { color: rgb(255,255, 255) !important; }</p>
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/haehae/feed.xml">
+          <a href="https://haeryny.github.io/haehae/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/haehae/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
