--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Trimester 2
 
   <tr>
     <td>18</td>
-    <td><a href="">Create Performance Task 2</a><a href="">Model and Object-Oriented Programming Hacks</a></td>
+    <td><a href="">Create Performance Task 2</a><a href="">, Model and Object-Oriented Programming Hacks</a></td>
     <td></td>
   </tr>
 </table>
