--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: home
 search_exclude: true
 ---
+![from doubts](https://user-images.githubusercontent.com/111464920/227629599-2d84089d-f291-484b-98e1-5f89bad7890e.gif)
 
 Hello, my name is Haeryn and this is my homepage.
 
