--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: home
 search_exclude: true
 ---
-![from doubts](https://user-images.githubusercontent.com/111464920/227629599-2d84089d-f291-484b-98e1-5f89bad7890e.gif)
 
-Hello, my name is Haeryn and this is my homepage.
+<div>
+  <img src="https://user-images.githubusercontent.com/111464920/227629599-2d84089d-f291-484b-98e1-5f89bad7890e.gif" 
+       width="500" 
+       height="500"
+       style="display: block; margin: 0 auto;" />
+</div>
+
+
 
