--- a/page2/index.html
+++ b/page2/index.html
@@ -71,9 +71,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://user-images.githubusercontent.com/111464920/227629599-2d84089d-f291-484b-98e1-5f89bad7890e.gif" alt="from doubts" /></p>
-
-<p>Hello, my name is Haeryn and this is my homepage.</p>
+        <div class="home"><div>
+  <img src="https://user-images.githubusercontent.com/111464920/227629599-2d84089d-f291-484b-98e1-5f89bad7890e.gif" width="500" height="500" style="display: block; margin: 0 auto;" />
+</div>
 
 
 
