deploy: 77fa1bbf743645fd45c7bdb72aa7e13bd5ab91db

--- a/_pages/artist-profile.html
+++ b/_pages/artist-profile.html
@@ -1,3 +1,7 @@
+<div>
+  <img src="https://images.squarespace-cdn.com/content/v1/552dc6dae4b036b38b3d7a6e/1596468461467-NJXJZ6LAZ1XB9H8ZW53X/Blue+West.gif" width="500" height="500" style="display: block; margin: 0 auto;" />
+</div>
+
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -456,7 +460,7 @@ function addItemToCart(title, genre, imageSrc) {
     var cartItemNames = cartItems.getElementsByClassName('cart-item-title')
     for (var i = 0; i < cartItemNames.length; i++) {
         if (cartItemNames[i].innerText == title) {
-            alert('This item is already added to the cart')
+            alert('This artist is already added to the favorites')
             return
         }
     }
